# chislaki

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
sample/: for_gauss_linear_equations_solver.txt  for_two_dimensional_interpolation_sequential.txt  gen_data.py
src/: gauss_linear_equations_solver.cpp  lu_decomposition_solver.cpp  two_dimensional_interpolation_sequential.cpp
