cmake_minimum_required(VERSION 3.1)
project(chislaki)

set(CMAKE_CXX_STANDARD 20)


add_executable(gauss_linear_equations_solver src/gauss_linear_equations_solver.cpp)
add_executable(two_dimensional_interpolation_sequential src/two_dimensional_interpolation_sequential.cpp)
add_executable(lu_decomposition_solver src/lu_decomposition_solver.cpp)

add_subdirectory(vendor/CLI11)
target_link_libraries(gauss_linear_equations_solver CLI11::CLI11)
target_link_libraries(two_dimensional_interpolation_sequential CLI11::CLI11)
